Update footer links and improve HTML formatting across multiple pages
- Changed footer link for AKAMI in 404.html, about.html, contact.html, index.html, privacy.html, projects.html, quote.html, services.html, terms.html to point to the new GitHub resume link.
- Improved HTML formatting for better readability by adding line breaks and indentation in various sections of about.html, contact.html, services.html, and others.

--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>L’entreprise - PARIS DECOR</title>
-  <meta name="description" content="PARIS DECOR — entreprise de rénovation (peinture, vitrerie, carrelage, parquet) en Île-de-France. Finitions soignées, devis rapides.">
+  <meta name="description"
+    content="PARIS DECOR — entreprise de rénovation (peinture, vitrerie, carrelage, parquet) en Île-de-France. Finitions soignées, devis rapides.">
   <meta name="keywords" content="PARIS DECOR, rénovation, peinture, vitrerie, carrelage, parquet, Île-de-France">
 
   <!-- Favicons -->
@@ -17,7 +18,9 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Lato:wght@300;400;700;900&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Lato:wght@300;400;700;900&family=Ubuntu:wght@300;400;500;700&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -37,7 +40,8 @@
     <div class="topbar d-flex align-items-center dark-background">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:parisdecor.contact@gmail.com">parisdecor.contact@gmail.com</a></i>
+          <i class="bi bi-envelope d-flex align-items-center"><a
+              href="mailto:parisdecor.contact@gmail.com">parisdecor.contact@gmail.com</a></i>
           <i class="bi bi-phone d-flex align-items-center ms-4"><span>06 99 85 80 05</span></i>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
@@ -62,7 +66,7 @@
             <li><a href="index.html">Accueil</a></li>
             <li><a href="about.html" class="active">L’entreprise</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="projects.html">Réalisations</a></li>            
+            <li><a href="projects.html">Réalisations</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -98,8 +102,13 @@
           <div class="col-lg-6">
             <div class="about-content" data-aos="fade-right" data-aos-delay="200">
               <h2>PARIS DECOR, la rénovation soignée en Île-de-France</h2>
-              <p class="lead">Entreprise à taille humaine basée à Épinay-sur-Seine, nous intervenons sur tout le second œuvre : <strong>peinture</strong>, <strong>vitrerie</strong>, <strong>carrelage</strong>, <strong>parquet</strong>, <strong>cloisons & isolation</strong>. Notre exigence : des supports parfaitement préparés et des finitions durables.</p>
-              <p>Nous accompagnons particuliers, pros et syndics de copropriété avec des devis clairs, un planning tenu et un chantier propre. Matériaux certifiés A+ (faibles émissions de COV) et conseils techniques selon vos pièces, usages et budgets.</p>
+              <p class="lead">Entreprise à taille humaine basée à Épinay-sur-Seine, nous intervenons sur tout le second
+                œuvre : <strong>peinture</strong>, <strong>vitrerie</strong>, <strong>carrelage</strong>,
+                <strong>parquet</strong>, <strong>cloisons & isolation</strong>. Notre exigence : des supports
+                parfaitement préparés et des finitions durables.</p>
+              <p>Nous accompagnons particuliers, pros et syndics de copropriété avec des devis clairs, un planning tenu
+                et un chantier propre. Matériaux certifiés A+ (faibles émissions de COV) et conseils techniques selon
+                vos pièces, usages et budgets.</p>
 
               <div class="achievement-boxes row g-4 mt-4">
                 <div class="col-6 col-md-3" data-aos="fade-up" data-aos-delay="300">
@@ -132,13 +141,15 @@
                 <h5>Engagements &amp; garanties</h5>
                 <div class="row g-3 align-items-center">
                   <div class="col-4 col-md-3">
-                    <img src="assets/img/construction/badge-4.webp" alt="Assurance & responsabilité civile" class="img-fluid">
+                    <img src="assets/img/construction/badge-4.webp" alt="Assurance & responsabilité civile"
+                      class="img-fluid">
                   </div>
                   <div class="col-4 col-md-3">
                     <img src="assets/img/construction/badge-3.webp" alt="Qualité matériaux A+" class="img-fluid">
                   </div>
                   <div class="col-4 col-md-3">
-                    <img src="assets/img/construction/badge-5.webp" alt="Respect des délais & sécurité" class="img-fluid">
+                    <img src="assets/img/construction/badge-5.webp" alt="Respect des délais & sécurité"
+                      class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -151,9 +162,11 @@
 
           <div class="col-lg-6">
             <div class="about-image position-relative" data-aos="fade-left" data-aos-delay="200">
-              <img src="assets/img/construction/project-3.webp" alt="Équipe PARIS DECOR sur chantier" class="img-fluid main-image rounded">
+              <img src="assets/img/construction/project-3.webp" alt="Équipe PARIS DECOR sur chantier"
+                class="img-fluid main-image rounded">
               <div class="image-overlay">
-                <img src="assets/img/construction/project-7.webp" alt="Finitions peinture & carrelage" class="img-fluid rounded">
+                <img src="assets/img/construction/project-7.webp" alt="Finitions peinture & carrelage"
+                  class="img-fluid rounded">
               </div>
               <div class="experience-badge" data-aos="zoom-in" data-aos-delay="500">
                 <span>ÎdF</span>
@@ -177,7 +190,8 @@
           <a href="index.html" class="logo d-flex align-items-center">
             <span class="sitename">PARIS DECOR</span>
           </a>
-          <p>Entreprise de rénovation à taille humaine spécialisée en peinture, vitrerie, carrelage et parquet. Nous intervenons sur toute l’Île-de-France pour des finitions durables et soignées.</p>
+          <p>Entreprise de rénovation à taille humaine spécialisée en peinture, vitrerie, carrelage et parquet. Nous
+            intervenons sur toute l’Île-de-France pour des finitions durables et soignées.</p>
           <div class="social-links d-flex mt-4">
             <a href="#"><i class="bi bi-twitter-x"></i></a>
             <a href="#"><i class="bi bi-facebook"></i></a>
@@ -221,16 +235,18 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">PARIS DECOR</strong> <span>Tous droits réservés</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">PARIS DECOR</strong> <span>Tous droits réservés</span>
+      </p>
       <div class="credits">
-        By  <a href="https://akamimehdi.netlify.app/">AKAMI</a>
+        By <a href="https://akamidev.github.io/MyResume/#services">AKAMI</a>
       </div>
     </div>
 
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
@@ -245,4 +261,5 @@
   <script src="assets/js/main.js"></script>
 
 </body>
+
 </html>
