--- a/services.html
+++ b/services.html
@@ -6,7 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Services - PARIS DECOR</title>
   <meta name="description" content="Peinture, vitrerie, carrelage, parquet, cloisons & isolation en Île-de-France.">
-  <meta name="keywords" content="peinture, vitrerie, carrelage, parquet, rénovation, cloisons, isolation, Île-de-France">
+  <meta name="keywords"
+    content="peinture, vitrerie, carrelage, parquet, rénovation, cloisons, isolation, Île-de-France">
 
   <!-- Favicons -->
   <!-- Favicons -->
@@ -18,7 +19,9 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Lato:wght@300;400;700;900&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Lato:wght@300;400;700;900&family=Ubuntu:wght@300;400;500;700&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +41,8 @@
     <div class="topbar d-flex align-items-center dark-background">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:parisdecor.contact@gmail.com">parisdecor.contact@gmail.com</a></i>
+          <i class="bi bi-envelope d-flex align-items-center"><a
+              href="mailto:parisdecor.contact@gmail.com">parisdecor.contact@gmail.com</a></i>
           <i class="bi bi-phone d-flex align-items-center ms-4"><span>06 99 85 80 05</span></i>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
@@ -98,13 +102,14 @@
                 <i class="bi bi-brush"></i>
               </div>
               <h3>Peinture intérieure &amp; extérieure</h3>
-              <p>Préparation des supports, enduits, sous-couches, finitions mates/satinées/laquées. Peintures A+ faible émission COV, teintes au nuancier.</p>
+              <p>Préparation des supports, enduits, sous-couches, finitions mates/satinées/laquées. Peintures A+ faible
+                émission COV, teintes au nuancier.</p>
               <div class="service-features">
                 <span><i class="bi bi-check-circle"></i> Murs &amp; plafonds</span>
                 <span><i class="bi bi-check-circle"></i> Boiseries &amp; métaux</span>
                 <span><i class="bi bi-check-circle"></i> Ravalement léger</span>
               </div>
-              <a href="quote.html" class="service-link">Demander un devis  <i class="bi bi-arrow-right"></i></a>
+              <a href="quote.html" class="service-link">Demander un devis <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -116,13 +121,14 @@
                 <i class="bi bi-windows"></i>
               </div>
               <h3>Vitrerie &amp; remplacement</h3>
-              <p>Pose et remplacement de vitrages simples, doubles vitrages, joints et mastics. Dépannage après casse et étanchéité.</p>
+              <p>Pose et remplacement de vitrages simples, doubles vitrages, joints et mastics. Dépannage après casse et
+                étanchéité.</p>
               <div class="service-features">
                 <span><i class="bi bi-check-circle"></i> Découpe sur mesure</span>
                 <span><i class="bi bi-check-circle"></i> Double vitrage</span>
                 <span><i class="bi bi-check-circle"></i> Étanchéité &amp; joints</span>
               </div>
-              <a href="quote.html" class="service-link">Demander un devis  <i class="bi bi-arrow-right"></i></a>
+              <a href="quote.html" class="service-link">Demander un devis <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -133,24 +139,26 @@
                 <i class="bi bi-grid-1x2"></i>
               </div>
               <h3>Carrelage &amp; faïence</h3>
-              <p>Préparation des sols/murs, pose droite ou diagonale, joints hydrofuges. Salles de bains, cuisines, crédences et terrasses.</p>
+              <p>Préparation des sols/murs, pose droite ou diagonale, joints hydrofuges. Salles de bains, cuisines,
+                crédences et terrasses.</p>
               <div class="service-features">
                 <span><i class="bi bi-check-circle"></i> SDB &amp; cuisines</span>
                 <span><i class="bi bi-check-circle"></i> Grès cérame/FAIENCE</span>
                 <span><i class="bi bi-check-circle"></i> Réparation &amp; reprise</span>
               </div>
-              <a href="quote.html" class="service-link">Demander un devis  <i class="bi bi-arrow-right"></i></a>
+              <a href="quote.html" class="service-link">Demander un devis <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
           <!-- charpente & ossature bois -->
-                    <div class="col-lg-4" data-aos="fade-up" data-aos-delay="350">
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="350">
             <div class="service-card featured">
               <div class="service-badge">Structure bois</div>
               <div class="service-icon">
                 <i class="bi bi-house-gear"></i>
               </div>
               <h3>Charpente &amp; ossature bois</h3>
-              <p>Conception et pose d’ossature bois, fermettes, pannes et chevrons. Renforts de structure, planchers et préparation à la couverture pour une durabilité optimale.</p>
+              <p>Conception et pose d’ossature bois, fermettes, pannes et chevrons. Renforts de structure, planchers et
+                préparation à la couverture pour une durabilité optimale.</p>
               <div class="service-features">
                 <span><i class="bi bi-check-circle"></i> Étude &amp; renforts</span>
                 <span><i class="bi bi-check-circle"></i> Traitement fongicide/insecticide</span>
@@ -165,14 +173,16 @@
         <div class="row mt-5">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-image-block">
-              <img src="assets/img/construction/project-1.webp" alt="Travaux de second œuvre - PARIS DECOR" class="img-fluid">
+              <img src="assets/img/construction/project-1.webp" alt="Travaux de second œuvre - PARIS DECOR"
+                class="img-fluid">
             </div>
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-list-block">
               <h3>Autres interventions</h3>
-              <p>Une équipe polyvalente pour vos chantiers de rénovation en Île-de-France, avec devis clair et délais tenus.</p>
+              <p>Une équipe polyvalente pour vos chantiers de rénovation en Île-de-France, avec devis clair et délais
+                tenus.</p>
 
               <div class="service-list">
                 <!-- Parquet -->
@@ -182,7 +192,8 @@
                   </div>
                   <div class="service-list-content">
                     <h4>Parquet flottant &amp; collé</h4>
-                    <p>Préparation des supports, sous-couches acoustiques, plinthes assorties. Ponçage léger et vitrification possible.</p>
+                    <p>Préparation des supports, sous-couches acoustiques, plinthes assorties. Ponçage léger et
+                      vitrification possible.</p>
                   </div>
                 </div>
 
@@ -193,7 +204,8 @@
                   </div>
                   <div class="service-list-content">
                     <h4>Cloisons &amp; isolation</h4>
-                    <p>Création de cloisons en plaques de plâtre, doublages, faux-plafonds, isolation thermique &amp; phonique.</p>
+                    <p>Création de cloisons en plaques de plâtre, doublages, faux-plafonds, isolation thermique &amp;
+                      phonique.</p>
                   </div>
                 </div>
 
@@ -204,7 +216,8 @@
                   </div>
                   <div class="service-list-content">
                     <h4>Préparation &amp; finitions</h4>
-                    <p>Dépose d’anciens revêtements, rebouchages, ratissage, enduits décoratifs, papiers peints &amp; revêtements muraux.</p>
+                    <p>Dépose d’anciens revêtements, rebouchages, ratissage, enduits décoratifs, papiers peints &amp;
+                      revêtements muraux.</p>
                   </div>
                 </div>
                 <!-- Charpente / Ossature bois -->
@@ -214,7 +227,8 @@
                   </div>
                   <div class="service-list-content">
                     <h4>Charpente &amp; ossature bois</h4>
-                    <p>Conception et pose d’ossature bois, renforts de structure, planchers, pannes et chevrons. Traitement, redressement et reprises de charpente, préparée pour une couverture durable.</p>
+                    <p>Conception et pose d’ossature bois, renforts de structure, planchers, pannes et chevrons.
+                      Traitement, redressement et reprises de charpente, préparée pour une couverture durable.</p>
                   </div>
                 </div>
               </div>
@@ -241,7 +255,8 @@
           <a href="index.html" class="logo d-flex align-items-center">
             <span class="sitename">PARIS DECOR</span>
           </a>
-          <p>Entreprise de rénovation à taille humaine spécialisée en peinture, vitrerie, carrelage et parquet. Nous intervenons sur toute l’Île-de-France pour des finitions durables et soignées.</p>
+          <p>Entreprise de rénovation à taille humaine spécialisée en peinture, vitrerie, carrelage et parquet. Nous
+            intervenons sur toute l’Île-de-France pour des finitions durables et soignées.</p>
           <div class="social-links d-flex mt-4">
             <a href="#"><i class="bi bi-twitter-x"></i></a>
             <a href="#"><i class="bi bi-facebook"></i></a>
@@ -284,15 +299,17 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">PARIS DECOR</strong> <span>Tous droits réservés</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">PARIS DECOR</strong> <span>Tous droits réservés</span>
+      </p>
       <div class="credits">
-        By  <a href="https://akamimehdi.netlify.app/">AKAMI</a>
+        By <a href="https://akamidev.github.io/MyResume/#services">AKAMI</a>
       </div>
     </div>
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
@@ -306,4 +323,5 @@
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 </body>
+
 </html>
