--- a/404.html
+++ b/404.html
@@ -181,7 +181,7 @@
       <p>© <span>Copyright</span> <strong class="px-1 sitename">PARIS DECOR</strong> <span>Tous droits réservés</span>
       </p>
       <div class="credits">
-        By <a href="https://akamimehdi.netlify.app/">AKAMI</a>
+        By <a href="https://akamidev.github.io/MyResume/#services">AKAMI</a>
       </div>
     </div>
 
