--- a/contact.html
+++ b/contact.html
@@ -5,21 +5,25 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Contact — PARIS DECOR</title>
-  <meta name="description" content="Contactez PARIS DECOR : peinture, vitrerie, carrelage, parquet. Devis gratuit sous 24–72h. Saint‑Gratien et Île‑de‑France.">
-  <meta name="keywords" content="contact peinture, contact vitrerie, devis carrelage, parquet, Saint-Gratien, Val-d'Oise">
+  <meta name="description"
+    content="Contactez PARIS DECOR : peinture, vitrerie, carrelage, parquet. Devis gratuit sous 24–72h. Saint‑Gratien et Île‑de‑France.">
+  <meta name="keywords"
+    content="contact peinture, contact vitrerie, devis carrelage, parquet, Saint-Gratien, Val-d'Oise">
 
   <!-- Favicons -->
   <!-- Favicons -->
-<link rel="icon" href="assets/img/favicon.ico" sizes="any">
-<link rel="icon" type="image/png" href="assets/img/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="assets/img/favicon-16x16.png" sizes="16x16">
-<link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png" sizes="180x180">
-<link rel="manifest" href="site.webmanifest">
+  <link rel="icon" href="assets/img/favicon.ico" sizes="any">
+  <link rel="icon" type="image/png" href="assets/img/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="assets/img/favicon-16x16.png" sizes="16x16">
+  <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.png" sizes="180x180">
+  <link rel="manifest" href="site.webmanifest">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Lato:wght@300;400;700;900&family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Lato:wght@300;400;700;900&family=Ubuntu:wght@300;400;500;700&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -39,7 +43,8 @@
     <div class="topbar d-flex align-items-center dark-background">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:parisdecor.contact@gmail.com">parisdecor.contact@gmail.com</a></i>
+          <i class="bi bi-envelope d-flex align-items-center"><a
+              href="mailto:parisdecor.contact@gmail.com">parisdecor.contact@gmail.com</a></i>
           <i class="bi bi-phone d-flex align-items-center ms-4"><span>06 99 85 80 05</span></i>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
@@ -95,7 +100,8 @@
           <div class="contact-info-panel">
             <div class="contact-info-header">
               <h3>Coordonnées</h3>
-              <p>Une question, un devis, une visite de chantier ? Contactez‑nous, nous répondons sous 24–72h ouvrées.</p>
+              <p>Une question, un devis, une visite de chantier ? Contactez‑nous, nous répondons sous 24–72h ouvrées.
+              </p>
             </div>
 
             <div class="contact-info-cards">
@@ -152,60 +158,58 @@
 
           <div class="contact-form-panel">
             <div class="map-container">
-<iframe
-  title="Carte — PARIS DECOR (Île-de-France)"
-  src="https://www.google.com/maps?q=%C3%8Ele-de-France&hl=fr&z=9&output=embed"
-  width="100%"
-  height="100%"
-  style="border:0;"
-  allowfullscreen
-  loading="lazy"
-  referrerpolicy="no-referrer-when-downgrade"
-></iframe>            </div>
+              <iframe title="Carte — PARIS DECOR (Île-de-France)"
+                src="https://www.google.com/maps?q=%C3%8Ele-de-France&hl=fr&z=9&output=embed" width="100%" height="100%"
+                style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
 
             <div class="form-container">
               <h3>Écrivez‑nous</h3>
-              <p>Précisez votre besoin (peinture, vitrerie, carrelage, parquet), l’adresse du chantier et vos disponibilités.</p>
+              <p>Précisez votre besoin (peinture, vitrerie, carrelage, parquet), l’adresse du chantier et vos
+                disponibilités.</p>
 
               <!-- ====== Formulaire Contact (variables unifiées) ====== -->
-<form id="contact-form" class="emailjs-form" action="#" method="post">
-  <div class="form-floating mb-3">
-    <input type="text" class="form-control" id="nameInput" name="from_name" placeholder="Nom complet" required>
-    <label for="nameInput">Nom complet</label>
-  </div>
+              <form id="contact-form" class="emailjs-form" action="#" method="post">
+                <div class="form-floating mb-3">
+                  <input type="text" class="form-control" id="nameInput" name="from_name" placeholder="Nom complet"
+                    required>
+                  <label for="nameInput">Nom complet</label>
+                </div>
 
-  <div class="form-floating mb-3">
-    <input type="email" class="form-control" id="emailInput" name="from_email" placeholder="Adresse e-mail" required>
-    <label for="emailInput">Adresse e-mail</label>
-  </div>
+                <div class="form-floating mb-3">
+                  <input type="email" class="form-control" id="emailInput" name="from_email"
+                    placeholder="Adresse e-mail" required>
+                  <label for="emailInput">Adresse e-mail</label>
+                </div>
 
-  <div class="form-floating mb-3">
-    <input type="text" class="form-control" id="subjectInput" name="subject" placeholder="Objet" required>
-    <label for="subjectInput">Objet</label>
-  </div>
+                <div class="form-floating mb-3">
+                  <input type="text" class="form-control" id="subjectInput" name="subject" placeholder="Objet" required>
+                  <label for="subjectInput">Objet</label>
+                </div>
 
-  <div class="form-floating mb-3">
-    <textarea class="form-control" id="messageInput" name="message" rows="5" placeholder="Votre message" style="height:150px" required></textarea>
-    <label for="messageInput">Votre message</label>
-  </div>
+                <div class="form-floating mb-3">
+                  <textarea class="form-control" id="messageInput" name="message" rows="5" placeholder="Votre message"
+                    style="height:150px" required></textarea>
+                  <label for="messageInput">Votre message</label>
+                </div>
 
-  <!-- Champs techniques -->
-  <input type="hidden" name="type" value="Message">
-  <input type="hidden" name="page" value="Contact">
-  <input type="text"   name="website" style="display:none"> <!-- honeypot anti-spam -->
+                <!-- Champs techniques -->
+                <input type="hidden" name="type" value="Message">
+                <input type="hidden" name="page" value="Contact">
+                <input type="text" name="website" style="display:none"> <!-- honeypot anti-spam -->
 
-  <div class="my-3">
-    <div class="loading" style="display:none">Chargement…</div>
-    <div class="error-message" style="display:none"></div>
-    <div class="sent-message" style="display:none">Votre message a été envoyé. Merci !</div>
-  </div>
+                <div class="my-3">
+                  <div class="loading" style="display:none">Chargement…</div>
+                  <div class="error-message" style="display:none"></div>
+                  <div class="sent-message" style="display:none">Votre message a été envoyé. Merci !</div>
+                </div>
 
-  <div class="d-grid">
-    <button type="submit" class="btn-submit">
-      Envoyer <i class="bi bi-send-fill ms-2" aria-hidden="true"></i>
-    </button>
-  </div>
-</form>
+                <div class="d-grid">
+                  <button type="submit" class="btn-submit">
+                    Envoyer <i class="bi bi-send-fill ms-2" aria-hidden="true"></i>
+                  </button>
+                </div>
+              </form>
 
             </div>
           </div>
@@ -223,7 +227,8 @@
           <a href="index.html" class="logo d-flex align-items-center">
             <span class="sitename">PARISDECOR</span>
           </a>
-          <p>Entreprise de rénovation : peinture, vitrerie, carrelage et parquet. Interventions en Île‑de‑France et Val‑d’Oise. Devis gratuit et conseils personnalisés.</p>
+          <p>Entreprise de rénovation : peinture, vitrerie, carrelage et parquet. Interventions en Île‑de‑France et
+            Val‑d’Oise. Devis gratuit et conseils personnalisés.</p>
           <div class="social-links d-flex mt-4">
             <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
             <a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
@@ -267,14 +272,16 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">PARISDECOR</strong> <span>Tous droits réservés</span></p>
-      <div class="credits">Editer par <a href="https://akamimehdi.netlify.app/">AKAMI</a></div>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">PARISDECOR</strong> <span>Tous droits réservés</span>
+      </p>
+      <div class="credits">Editer par <a href="https://akamidev.github.io/MyResume/#services">AKAMI</a></div>
     </div>
 
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
@@ -288,50 +295,50 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
-<!-- EmailJS SDK -->
-<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-<script>
-  (function () {
-// NOTE pour les curieux :
-// - Cette "publicKey" EmailJS est CONÇUE pour être publique.
-// - Sur un site statique (GitHub Pages), aucune clé front ne peut être cachée.
-// - La sécurité repose sur : domaine autorisé (whitelist), quotas EmailJS,
-//   honeypot/reCAPTCHA et le fait qu'on N’UTILISE PAS de clé privée ici.
-// - En cas de besoin d’opacité totale, utiliser un backend / serverless (voir ci-dessous).
-    emailjs.init({ publicKey: "UDWdHiWlVXJ5uqkPa" });
+  <!-- EmailJS SDK -->
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script>
+    (function () {
+      // NOTE pour les curieux :
+      // - Cette "publicKey" EmailJS est CONÇUE pour être publique.
+      // - Sur un site statique (GitHub Pages), aucune clé front ne peut être cachée.
+      // - La sécurité repose sur : domaine autorisé (whitelist), quotas EmailJS,
+      //   honeypot/reCAPTCHA et le fait qu'on N’UTILISE PAS de clé privée ici.
+      // - En cas de besoin d’opacité totale, utiliser un backend / serverless (voir ci-dessous).
+      emailjs.init({ publicKey: "UDWdHiWlVXJ5uqkPa" });
 
-    const form    = document.getElementById("contact-form");
-  const loading = form.querySelector(".loading");
-  const errorEl = form.querySelector(".error-message");
-  const sentEl  = form.querySelector(".sent-message");
+      const form = document.getElementById("contact-form");
+      const loading = form.querySelector(".loading");
+      const errorEl = form.querySelector(".error-message");
+      const sentEl = form.querySelector(".sent-message");
 
-  form.addEventListener("submit", async (e) => {
-    e.preventDefault();
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
 
-    // anti-bot
-    if (form.website && form.website.value) return;
+        // anti-bot
+        if (form.website && form.website.value) return;
 
-    // UI
-    errorEl.style.display = "none";
-    sentEl.style.display  = "none";
-    loading.style.display = "block";
+        // UI
+        errorEl.style.display = "none";
+        sentEl.style.display = "none";
+        loading.style.display = "block";
 
-    try {
-      // IDs EmailJS : service Gmail + modèle Notification (Contact/Devis unifié)
-      await emailjs.sendForm("service_zdc6ou5", "template_ie5xrpz", form);
+        try {
+          // IDs EmailJS : service Gmail + modèle Notification (Contact/Devis unifié)
+          await emailjs.sendForm("service_zdc6ou5", "template_ie5xrpz", form);
 
-      loading.style.display = "none";
-      sentEl.style.display  = "block";
-      form.reset();
-    } catch (err) {
-      loading.style.display = "none";
-      errorEl.textContent   = "Erreur d’envoi. Réessayez ou contactez-nous : parisdecor.contact@gmail.com";
-      errorEl.style.display = "block";
-      console.error(err);
-    }
-  });
-})();
-</script>
+          loading.style.display = "none";
+          sentEl.style.display = "block";
+          form.reset();
+        } catch (err) {
+          loading.style.display = "none";
+          errorEl.textContent = "Erreur d’envoi. Réessayez ou contactez-nous : parisdecor.contact@gmail.com";
+          errorEl.style.display = "block";
+          console.error(err);
+        }
+      });
+    })();
+  </script>
 </body>
 
 
