--- a/terms.html
+++ b/terms.html
@@ -308,7 +308,7 @@
     <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong class="px-1 sitename">PARIS DECOR</strong> <span>Tous droits réservés</span>
       </p>
-      <div class="credits">By <a href="https://akamimehdi.netlify.app/">AKAMI</a></div>
+      <div class="credits">By <a href="https://akamidev.github.io/MyResume/#services">AKAMI</a></div>
     </div>
   </footer>
 
