Mise à jour des mentions de copyright et ajout de l'attribut target="_blank" pour les liens dans plusieurs fichiers HTML

--- a/about.html
+++ b/about.html
@@ -105,7 +105,8 @@
               <p class="lead">Entreprise à taille humaine basée à Épinay-sur-Seine, nous intervenons sur tout le second
                 œuvre : <strong>peinture</strong>, <strong>vitrerie</strong>, <strong>carrelage</strong>,
                 <strong>parquet</strong>, <strong>cloisons & isolation</strong>. Notre exigence : des supports
-                parfaitement préparés et des finitions durables.</p>
+                parfaitement préparés et des finitions durables.
+              </p>
               <p>Nous accompagnons particuliers, pros et syndics de copropriété avec des devis clairs, un planning tenu
                 et un chantier propre. Matériaux certifiés A+ (faibles émissions de COV) et conseils techniques selon
                 vos pièces, usages et budgets.</p>
@@ -235,10 +236,11 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">PARIS DECOR</strong> <span>Tous droits réservés</span>
+      <p>© 2025<span>Copyright</span> <strong class="px-1 sitename">PARIS DECOR</strong> <span>Tous droits
+          réservés</span>
       </p>
       <div class="credits">
-        By <a href="https://akamidev.github.io/MyResume/#services">AKAMI</a>
+        By <a href="https://akamidev.github.io/MyResume/#services" target="_blank" rel="noopener noreferrer">AKAMI</a>
       </div>
     </div>
 
