--- a/contact.html
+++ b/contact.html
@@ -272,10 +272,12 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">PARISDECOR</strong> <span>Tous droits réservés</span>
+      <p>© 2025<span>Copyright</span> <strong class="px-1 sitename">PARISDECOR</strong> <span>Tous droits
+          réservés</span>
       </p>
-      <div class="credits">Editer par <a href="https://akamidev.github.io/MyResume/#services">AKAMI</a></div>
-    </div>
+      <div class="credits">
+        By <a href="https://akamidev.github.io/MyResume/#services" target="_blank" rel="noopener noreferrer">AKAMI</a>
+      </div>
 
   </footer>
 
