--- a/privacy.html
+++ b/privacy.html
@@ -280,7 +280,8 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">PARIS DECOR</strong> <span>Tous droits réservés</span>
+      <p>© 2025<span>Copyright</span> <strong class="px-1 sitename">PARIS DECOR</strong> <span>Tous droits
+          réservés</span>
       </p>
       <div class="credits">By <a href="https://akamidev.github.io/MyResume/#services">AKAMI</a></div>
     </div>
