Mise à jour des mentions de copyright pour inclure un séparateur dans plusieurs fichiers HTML

--- a/starter-page.html
+++ b/starter-page.html
@@ -200,7 +200,8 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© 2025<span>Copyright</span> <strong class="px-1 sitename">Constructo</strong> <span>All Rights Reserved</span>
+      <p>© 2025 | <span>Copyright</span> <strong class="px-1 sitename">Constructo</strong> <span>All Rights
+          Reserved</span>
       </p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
