--- a/404.html
+++ b/404.html
@@ -178,7 +178,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© 2025<span>Copyright</span> <strong class="px-1 sitename">PARIS DECOR</strong> <span>Tous droits
+      <p>© 2025 | <span>Copyright</span> <strong class="px-1 sitename">PARIS DECOR</strong> <span>Tous droits
           réservés</span>
       </p>
       <div class="credits">
